2012-12-03  Alexis Menard  <alexis@webkit.org>

        Enable CSS3 background-position offset by default
        https://bugs.webkit.org/show_bug.cgi?id=103917

        Reviewed by Benjamin Poulain.

        Even though each port may enable or not the feature we still need
        to pass it at configure time otherwise it will be disabled.

        * Scripts/webkitperl/FeatureList.pm:

2012-12-03  Sudarsana Nagineni  <sudarsana.nagineni@intel.com>

        Unreviewed. Adding myself to committers.py.

        * Scripts/webkitpy/common/config/committers.py:

2012-12-03  Laszlo Gombos  <l.gombos@samsung.com>

        [CMake] Enable building WebKit2-only build for the EFL port
        https://bugs.webkit.org/show_bug.cgi?id=103820

        Reviewed by Gyuyoung Kim.

        Set ENABLE_WEBKIT2 to OFF if build-webkit was run with --no-webkit2.
        Never set ENABLE_WEBKIT in build-webkit. This will simplyfy invoking
        cmake directly. Initialize $cmakeArgs to avoid potential
        warnings when running the script.

        * Scripts/build-webkit:

2012-12-03  Tommy Widenflycht  <tommyw@google.com>

        Speech Recognition API: Update SpeechRecognitionEvent to match the specification
        https://bugs.webkit.org/show_bug.cgi?id=103407

        Reviewed by Kentaro Hara.

        Changing the mock to use the new results delivery API.

        * DumpRenderTree/chromium/MockWebSpeechRecognizer.cpp:

2012-12-03  Alexis Menard  <alexis@webkit.org>

        [Qt] Enable CSS3 background-position offsets by default.
        https://bugs.webkit.org/show_bug.cgi?id=103877

        Reviewed by Tor Arne Vestbø.

        Enable by default CSS3 background-position offsets.

        * qmake/mkspecs/features/features.pri:

2012-12-03  KyungTae Kim  <ktf.kim@samsung.com>

        [EFL][WK2] Use float variable for zoom levels for MiniBrowser
        https://bugs.webkit.org/show_bug.cgi?id=103863

        Reviewed by Gyuyoung Kim.
