@@ -1,3 +1,12 @@
+2012-12-03  Julien BRIANCEAU   <jbrianceau@nds.com>
+
+        Add Qt/SH4 build slave to build.webkit.org
+        https://bugs.webkit.org/show_bug.cgi?id=103384
+
+        Reviewed by Csaba Osztrogonác.
+
+        * BuildSlaveSupport/build.webkit.org-config/config.json:
+
 2012-12-03  Alexis Menard  <alexis@webkit.org>
 
         Enable CSS3 background-position offset by default
